# summarize_pdfs

./: .env.example  .gitignore  README.md  config.example.yaml  pyproject.toml
scripts/: export_summary.py
src/summarize_pdfs/: cli.py  config.py  models.py
src/summarize_pdfs/eval/: gold_standard.py
src/summarize_pdfs/exam/: __init__.py  question_parser.py
src/summarize_pdfs/export/: __init__.py  dedupe_notes.py  formula_glossary.py  notes.py  plaintext.py  summary.py  topic_facts.py
src/summarize_pdfs/index/: __init__.py  vector_store.py
src/summarize_pdfs/ingest/: __init__.py  pdf_extractor.py
src/summarize_pdfs/memory/: __init__.py  store.py
src/summarize_pdfs/pipeline/: concept_extractor.py  cooccurrence.py  expand_notes.py  llm.py  polish_notes.py  prompts.py  retriever.py  runner.py  synthesizer.py
tests/: test_cooccurrence.py  test_dedupe_notes.py  test_formula_glossary.py  test_polish_notes.py  test_prompts.py  test_topic_facts.py
